src/css/scss/templates/_ratings.scss
.flow-rating {
    background: $magenta;

    .tcon-remove{

        &:after, &:before {
            background: $gray-mid2;
        }
    }


    .read-ratings,
    .write-review {
        text-align: left;
        position: absolute;

    }

    .user-rating-count {
        text-align: center;
    }

    .write-review {
        right: 0;
    }

    h1.page-title {
        color:$gray-dark;
        margin-bottom:$vru*4;
    }

    .main a {
        font-style: italic;
        color: $magenta;
    }

    .stars-static {
        position: relative;
        width: 170px;
        margin: 0 auto;
    }

    .star-rating label,
    .stars-static span {
        color: $gray-mid;
        font-size: 28px;
        padding: 3px;

        &.is-selected {
            color: $magenta;
        }
    }

    .stars-static-top {
        position: absolute;
        z-index: 1;
        overflow: hidden;

        span {
            color: $magenta;
        }
    }

    .instruction {
        text-align: left;
        margin:0 15px $vru*2;
        line-height: 1.4;
    }

    article {
        text-align: left;
        border-bottom:1px solid $gray-mid;
        padding-bottom:5*$vru;

        h1 {
            font-size: 16px;
            margin-bottom: $vru*2;
        }

        a.readmore {
            text-align: right;
            @include labelfont(bold);
            color:$gray-mid2;
            font-style: normal;
            font-size: 12px;
            text-decoration:none;
            display: block;
        }

        &:last-child {
            margin-bottom: 6em;
        }
    }
}

.write-review .stars-static {
    margin-bottom:5*$vru;
}

.provider {

    .stars-static {
        position: relative;
        width: 85px;
        margin: 0 auto;
    }

    .star-rating label,
    .stars-static span {
        color: $gray-dark;
        font-size: 12px;
        padding: 3px;

        &.is-selected {
            color: $magenta;
        }
    }

    .stars-static-top {
        position: absolute;
        z-index: 1;
        overflow: hidden;

        span {
            color: $magenta;
        }
    }
}

